--- a/web-client/login.html
+++ b/web-client/login.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Users</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <style type="text/css">
         body {
             color: #566787;
@@ -274,111 +273,38 @@
 </head>
 <body>
 
-
-<div class="container">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Cinema</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="index.html">Home</a>
-                    <a class="nav-item nav-link" href="movies.html">Movie</a>
-                    <a class="nav-item nav-link" href="screenings.html">Screening</a>
-                    <a class="nav-item nav-link active" href="#">Users</a>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <div class="table-wrapper">
-            <div class="table-title">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h2>Manage <b>Users</b></h2>
+<div class="container py-5">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-6 mx-auto">
+                    <!-- form card login -->
+                    <div class="card rounded-0">
+                        <div class="card-header bg-primary">
+                            <h3 class="mb-0 text-white">Login</h3>
+                        </div>
+                        <div class="card-body">
+                            <form class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+                                  method="POST">
+                                <div class="form-group">
+                                    <label for="username">Username</label>
+                                    <input type="text" class="form-control form-control-lg rounded-0" name="uname1"
+                                           id="username" required="">
+                                    <div class="invalid-feedback">Oops, you missed this one.</div>
+                                </div>
+                                <div class="form-group">
+                                    <label>Password</label>
+                                    <input type="password" class="form-control form-control-lg rounded-0" id="password"
+                                           required="" autocomplete="new-password">
+                                    <div class="invalid-feedback">Enter your password too!</div>
+                                </div>
+                                <button type="submit" class="btn btn-success btn-lg float-right" id="btnLogin">Login
+                                </button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
-            <table id="usersTable" class="table table-striped table-hover">
-                <thead>
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Username</th>
-                    <th>Email</th>
-                    <th>Status</th>
-                    <th>Bookings</th>
-                    <th>Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <!--<tr>-->
-                    <!--<td>-->
-							<!--<span class="custom-checkbox">-->
-								<!--<input type="checkbox" id="checkbox1" name="options[]" value="1">-->
-								<!--<label for="checkbox1"></label>-->
-							<!--</span>-->
-                    <!--</td>-->
-                    <!--<td>Branko</td>-->
-                    <!--<td>Fulurija</td>-->
-                    <!--<td>brankofulurija@gmail.com</td>-->
-                    <!--<td>fulu</td>-->
-                    <!--<td>GOLD</td>-->
-                    <!--<td>3</td>-->
-                    <!--<td>-->
-                        <!--<a href="#banUserModal" class="delete" data-toggle="modal">-->
-                            <!--<i class="material-icons" data-toggle="tooltip" title="Ban">block</i>-->
-                        <!--</a>-->
-                    <!--</td>-->
-                <!--</tr>-->
-                </tbody>
-            </table>
-            <div class="clearfix">
-                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-                <ul class="pagination">
-                    <li class="page-item"><a href="#" class="page-link">Previous</a></li>
-                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
-                </ul>
-            </div>
-        </div>
-    </main>
-</div>
-
-<!-- Delete Modal HTML -->
-<div id="banUserModal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form onsubmit="banUser()">
-                <div class="modal-header">
-                    <h4 class="modal-title">Ban user</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <p>Are you sure you want to ban this user?</p>
-
-                    <div class="form-group">
-                        <label for="expires">Expires after:</label>
-                        <input id="expires" class="form-control" type="number" placeholder="minutes" required>
-                    </div>
-
-                    <p class="text-warning">
-                        <small>This action cannot be undone.</small>
-                    </p>
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-danger" value="Ban">
-                </div>
-            </form>
         </div>
     </div>
 </div>
@@ -394,53 +320,64 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
-        // Activate tooltip
-        $('[data-toggle="tooltip"]').tooltip();
+<script>
+    function redirectIfLoggedIn() {
+        const token = window.localStorage.getItem('token');
+        const user = parseJwt(token);
 
-        // Select/Deselect checkboxes
-        var checkbox = $('table tbody input[type="checkbox"]');
-        $("#selectAll").click(function () {
-            if (this.checked) {
-                checkbox.each(function () {
-                    this.checked = true;
-                });
-            } else {
-                checkbox.each(function () {
-                    this.checked = false;
-                });
-            }
-        });
-        checkbox.click(function () {
-            if (!this.checked) {
-                $("#selectAll").prop("checked", false);
-            }
-        });
+        if (user.sub == 'fulu') {
+            window.location.href = 'admin/users.html';
+        } else {
+            window.location.href = 'profile.html';
+        }
+    }
 
-        $.get('http://localhost:8083/users', function (users) {
-            $(function () {
-                let content = '';
-                for (let i = 0; i < users.length; i++) {
-                    content += '<tr id="' + users[i].id + '">';
-                    content += '<td>' + users[i].firstName + '</td>';
-                    content += '<td>' + users[i].lastName + '</td>';
-                    content += '<td>' + users[i].username + '</td>';
-                    content += '<td>' + users[i].email + '</td>';
-                    content += '<td>' + users[i].status + '</td>';
-                    content += '<td>' + users[i].bookingCount + '</td>';
-                    content += '<td>' +
-                        '<a href="#banUserModal" class="delete" data-toggle="modal">' +
-                        '<i class="material-icons" data-toggle="tooltip" title="Ban">block</i>' +
-                        '</a>' +
-                        '</td>';
-                    content += '</tr>';
+    // redirectIfLoggedIn();
+
+    function parseJwt (token) {
+        var base64Url = token.split('.')[1];
+        var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+        var jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+            return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+        }).join(''));
+
+        return JSON.parse(jsonPayload);
+    }
+
+    $("#btnLogin").click(function (event) {
+        var form = $("#formLogin")
+        event.preventDefault()
+
+        form.addClass('was-validated');
+
+        if (form[0].checkValidity() === false) {
+            event.stopPropagation()
+        } else {
+            const username = $('#username').val();
+            const password = $('#password').val();
+            const body = {
+                username,
+                password
+            }
+            console.log(body);
+            $.ajax({
+                type: "POST",
+                url: 'http://localhost:8083/login',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                data: JSON.stringify(body),
+                success: function (data, status, request) {
+                    const token = request.getResponseHeader('authorization').split(' ')[1];
+                    console.log('token=', token);
+                    window.localStorage.setItem('token', token);
+                    redirectIfLoggedIn();
                 }
-                $('#usersTable tbody').html(content);
             });
-        });
-
+        }
     });
+
+
 </script>
 </body>
 </html>
