--- a/web-client/user/screenings.html
+++ b/web-client/user/screenings.html
@@ -436,6 +436,35 @@
 
 <script type="text/javascript">
     let allScreenings = [];
+    const accessToken = window.localStorage.getItem("token");
+    var tokenUser = parseJwt(accessToken);
+
+    function parseJwt(token) {
+        var base64Url = token.split('.')[1];
+        var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+        var jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
+            return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+        }).join(''));
+
+        return JSON.parse(jsonPayload);
+    };
+
+    function getUserId() {
+        $.ajax({
+            type: "GET",
+            url: 'http://localhost:8080/users?username=' + tokenUser,
+            headers: {
+                'Content-Type': 'application/json',
+                'Authorization': 'Bearer ' + accessToken
+            },
+            success: function (users) {
+                let user = users[0];
+                console.log(user);
+            }
+        });
+    }
+
+    getUserId();
 
     function getScreenings() {
         $.get('http://localhost:8082/movies', function (movies) {
